--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kicad_libs_GRZ"]
 	path = kicad_libs_GRZ
 	url = https://github.com/Fabien-B/kicad_libs_GRZ
+[submodule "kicad_libs_FBO"]
+	path = kicad_libs_FBO
+	url = https://github.com/Fabien-B/kicad_libs_FBO.git
