--- a/chibi/cfg/board.cfg
+++ b/chibi/cfg/board.cfg
@@ -116,4 +116,6 @@ PC08    BP_RET          INPUT       PULLUP
 PC09    BP_OK           INPUT       PULLUP
 PC10    LED_RUN         LED
 PC11    LED_HB          LED
-PC12    SD_DETECT       INPUT       FLOATING    # TODO pullup ?
+PC12    SD_DETECT       INPUT       PULLUP
+
+PD02    SD_CS           OUTPUT      PUSHPULL    LEVEL_HIGH
